--- a/man/icewmhint.pod
+++ b/man/icewmhint.pod
@@ -2,37 +2,37 @@
 
 =head1 NAME
 
- icewmhint - set IceWM hints by window class and instance
+icewmhint - set IceWM hints by window class and instance
 
 =head1 SYNOPSIS
 
-B<icewmhint> [I<CLASS>B<.>I<INSTANCE>] I<OPTION> I<VALUE>
+B<icewmhint> I<CLASS>B<.>I<INSTANCE> I<OPTION> I<VALUE> ...
 
 =head1 DESCRIPTION
 
-B<icewmhint> is a simple utility for passing IceWM hints to L<icewm(1)>
-by window class and instance.  Unlike tools that use WMH or EWMH, such
-as L<icesh(1)>, L<wmctrl(1)> and L<xdotool(1)>, B<icewmhint> uses a
-special property, C<_ICEWM_WINOPHINT>, on the root window to pass
-special hints to L<icewm(1)>.
+B<icewmhint> is a utility for passing IceWM hints to L<icewm(1)>.
+B<icewm> uses these hints for the first I<X11 client> which is
+subsequently started. They take precedence over hints from
+the L<icewm-winoptions(1)> file.
+
+A hint is a triplet consisting of a I<class.instance>, an
+I<IceWM winoption> and its value. Multiple hints can be given per
+invocation of B<icewmhint>.
+
+The hints are communicated over the C<_ICEWM_WINOPTHINT> property on
+the root window.  B<icewmhint> appends hints to this property, while
+B<icewm> removes the property after reading it.
 
 =head1 OPTIONS
 
-B<icesh> recognizes the following options:
+B<icewmhint> recognizes the following options:
 
 =head2 COMMAND OPTIONS
 
-Command options are mutually exclusive.  Only one command option can be
-specified per invocation.  If no command option is specified, argument
-parsing and processing is performed.
+Only one command option can be specified per invocation.  If no command
+option is specified, argument parsing and processing is performed.
 
 =over
-
-=item B<-d>, B<--display>=I<DISPLAY>
-
-Use I<DISPLAY> to connect to the X server.
-If this option is missing then I<DISPLAY>
-is read from the environment variable C<DISPLAY>.
 
 =item B<-h>, B<--help>
 
@@ -50,32 +50,42 @@ Print copying permissions to F<stdout> for the program and exit.
 
 =head2 GENERAL OPTIONS
 
-B<icewmhint> has not general options: all information is passed using
-non-option arguments.
-
-=head1 ARGUMENTS
-
-The following arguments are required:
-
 =over
 
-=item [I<CLASS>B<.>I<INSTANCE>]
+=item B<-d>, B<--display>=I<DISPLAY>
 
-Specifies the ICCCM 2.0 B<WM_CLASS> property in terms of resource name
-and resource class separated by a period (C<.>).  For example:
-C<XTerm.xterm>.  This argument must be specified for all commands
-affecting client windows.
-
-=item I<OPTION> I<VALUE>
-
-Specifies the I<OPTION> to affect and the I<VALUE> that goes with the
-option.  Options and their arguments are as follows:
+Specifies the X11 DISPLAY. If unspecified, defaults to B<$DISPLAY>.
 
 =back
 
+=head1 ARGUMENTS
+
+The following three arguments are required for each hint.
+
+=over
+
+=item I<CLASS>B<.>I<INSTANCE>
+
+Specifies the ICCCM 2.0 B<WM_CLASS> property in terms of resource class
+and resource name separated by a period (C<.>).  For example:
+C<XTerm.xterm>. Just the resource class or resource name without a dot
+is also acceptable, like C<XTerm> or C<xterm>.
+
+=item I<OPTION>
+
+Specifies the I<OPTION> to affect.
+
+=item I<VALUE>
+
+Gives the I<VALUE> for the option.
+
+=back
+
+Multiple hints can be given.
+
 =head2 GENERAL OPTION ARGUMENTS
 
-General option arguments are normally associated with GNOME WinWM/WMH
+General option arguments are normally associated with I<GNOME WinWM/WMH>
 hints (except for the tray option argument).
 
 =over
@@ -83,16 +93,15 @@ hints (except for the tray option argument).
 =item B<icon> I<NAME>
 
 Specifies the icon name for windows of I<CLASS>B<.>I<INSTANCE>.
-I<NAME> should be the name of the icon.  L<icewm(1)> will use is
-usual method to find the icon.  The default is the name provided by
-window manager hints.
+I<NAME> should be the name of the icon.  L<icewm(1)> will use its
+usual method to locate the icon.  The default is the name provided
+by window manager hints.
 
 =item B<workspace> I<WORKSPACE>
 
 Specifies the workspace on which a window of I<CLASS>B<.>I<INSTANCE>
-will be initially placed.  The default is to place the window on the
-current workspace.  I<WORKSPACE> should be a numeric workspace
-number (counting from 0).
+will be initially placed.  The default is the current workspace.
+I<WORKSPACE> should be a workspace number counting from 0.
 
 =item B<geometry> I<GEOMETRY>
 
@@ -103,14 +112,14 @@ window manager hints.
 
 =item B<layer> {B<Desktop>|B<Below>|B<Normal>|B<OnTop>|B<Dock>|B<AboveDock>|B<Menu>|I<NUMBER>}
 
-The layer is a similar concept to the layer specified by GNOME/WMH and
-implied by NetWM/EWMH.  It is in this case however specific to
+The layer is a similar concept to the layer specified by I<GNOME/WMH> and
+implied by I<NetWM/EWMH>.  It is in this case however specific to
 L<icewm(1)>.
 
-The command option specifies the layer to be associated with an
+This command option specifies the layer to be associated with a
 I<CLASS>B<.>I<INSTANCE>.  The default is the C<Normal> layer.  I<VALUE>
-is either a numeric layer I<NUMBER> or a symbolic layer name.  Symbolic
-layer names are one of the following:
+is either a layer number or a symbolic layer name.  Symbolic
+layer names are:
 
     Desktop    (0)  desktop window layer.
     Below      (2)  below normal windows.
@@ -125,7 +134,7 @@ layer names are one of the following:
 Specifies the tray handling to be applied to windows with
 I<CLASS>B<.>I<INSTANCE>.  This option is specific to L<icewm(1)> and
 sets the C<_ICEWM_TRAY> property associated with the window.
-The default is C<Ignore>.  I<VALUE> can be a numerical option I<NUMBER>
+The default is C<Ignore>.  I<VALUE> can be an option number
 or a symbolic name as follows:
 
     Ignore     (0)  only in task list.
@@ -136,10 +145,10 @@ or a symbolic name as follows:
 
 =head2 FUNCTION OPTION ARGUMENTS
 
-Specifies which functions are disabled/enabled (0/1) for windows with
-I<CLASS>B<.>I<INSTANCE>.  All function options have a default value of
-enabled (1) unless overridden by the application.  The Motif-like
-functions are as follows:
+Specifies which functions are disabled or enabled (0/1) for windows with
+I<CLASS>B<.>I<INSTANCE>.  All functions have a default value of enabled
+(1) unless overridden by the application.  The Motif-like functions are
+as follows:
 
     fClose     can be closed:        (default: 1).
     fHide      can be hidden:        (default: 1).
@@ -151,9 +160,9 @@ functions are as follows:
 
 =head2 DECOR OPTION ARGUMENTS
 
-Specifies which decorations are disabled/enabled (0/1) for windows with
-I<CLASS>B<.>I<INSTANCE>.  All decor options have a default value of
-enabled (1) unless overridden by the application. The Motif-like
+Specifies which decorations are disabled or enabled (0/1) for windows
+with I<CLASS>B<.>I<INSTANCE>.  All decor options have a default value
+of enabled (1) unless overridden by the application. The Motif-like
 decorations are as follows:
 
     dBorder    has border:           (default: 1).
@@ -181,6 +190,7 @@ advanced features are as follows:
     forcedClose               no close dialog.
     fullKeys                  provided more keys.
     ignoreNoFocusHint         focus even no-input.
+    ignorePagerPreview        do not show in pager preview.
     ignorePositionHint        place automatically.
     ignoreQuickSwitch         not on quick switch.
     ignoreTaskBar             not on task bar.
@@ -195,6 +205,19 @@ advanced features are as follows:
     startMaximizedHorz        start maximized horizontal.
     startMaximizedVert        start maximized vertical.
     startMinimized            start minimized.
+
+=head1 EXAMPLE
+
+    # Here is how to preload an invisible background process of chromium
+    # on the fourth workspace which is only visible on the Window List.
+
+    icewmhint Chromium-browser startMinimized 1 \
+              Chromium-browser workspace 3 \
+              Chromium-browser ignorePagerPreview 1 \
+              Chromium-browser ignorePositionHint 1 \
+              Chromium-browser ignoreTaskBar 1 \
+              Chromium-browser ignoreQuickSwitch 1
+    chromium
 
 =head1 BUGS
 
