--- a/man/icewm-programs.pod
+++ b/man/icewm-programs.pod
@@ -211,7 +211,7 @@ Following is the example F<programs> file that ships with L<icewm(1)>:
 
 =head1 FILES
 
-Locations for the programs file are as follows:
+Locations for the F<programs> file are as follows:
 
 =over
 
